--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,9 @@ body {
 .btn-prime span {
   color: var(--bold-font-color);
 }
+li{
+  font-size: 1em;
+}
 
 a {
   text-decoration: none;
